# best-of-n-language-symbolic-planner-hybrids

./: .gitignore  README.md  pyproject.toml
docs/: claim_audit.md  claims.json  final_audit.md  hostile_prior_work.md  literature_map.md  novelty_decision.md  related_work_matrix.csv
experiments/: run_expansion_suite.py  run_frozenlake_benchmark.py  run_suite.py
paper/: iclr2027_conference.sty  main.tex  results_macros.tex
paper/final/: best-of-n-language-symbolic-planner-hybrids-v4-manifest.json
results/expansion/: candidate_correlation_summary.csv  claims.json  expanded_summary.csv  expanded_trials.csv  failure_cases.csv  manifest.json
results/frozenlake_benchmark/: claims.json  frozenlake_summary.csv  frozenlake_trials.csv  manifest.json
results/full/: rollouts.csv  summary.csv  summary.json
results/smoke/: rollouts.csv  summary.csv  summary.json
scripts/: build_literature_docs.py  build_paper.py  run_all.ps1  run_all.sh  run_claim_audit.py  run_smoke.ps1  run_smoke.sh
src/bon_symbolic/: __init__.py  checking.py  domain.py  metrics.py  scoring.py  selection.py  theory.py
src/boundary_planner/: __init__.py  execution.py  frozenlake_benchmark.py  generator.py  metrics.py  scoring.py  selection.py
tests/: test_compiler_and_checker.py  test_diagnostics.py  test_expansion_suite.py  test_frozenlake_benchmark.py  test_selection.py
